crates/rome_formatter/tests/specs/prettier/typescript/declare/declare_namespace.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: declare_namespace.ts

---
# Input
```js
declare namespace m {
  class C {
    field = "field";
  }
}

```

# Output
```js
declare namespace m {
  class C {
    field = "field";
  }
}

```

# Errors
```
error[SyntaxError]: Abstract properties cannot have initializers
  ┌─ declare_namespace.ts:3:5
  │
3 │     field = "field";
  │     ^^^^^^^^^^^^^^^^


```


